--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="helloworld">hoooooolaaaa toyos</string>
+    <string name="helloworld">HOOOOOOOOOOLLLLLAAAA toyos</string>
+    <string name="eltexto1">toyos toyos toyos toyos</string>
+
 </resources>
